@@ -132,6 +132,47 @@
 		</TD>
 	</TR>
 {/if}
+{if $nodestats.month.download.data || $nodestats.month.upload.data}
+        <TR CLASS="LIGHT">
+	        <TD WIDTH="1%" CLASS="FLEFT">
+		        <IMG SRC="img/traffic.gif" ALT="">
+		</TD>
+		<TD WIDTH="99%" CLASS="FRIGHT" COLSPAN="2" nowrap>
+			<B>{t}Traffic stats from last (download/upload):{/t}</B>
+		</TD>
+	</TR>
+        <TR CLASS="LIGHT">
+	        <TD WIDTH="1%" CLASS="FLEFT"></TD>
+		<TD WIDTH="99%" COLSPAN="2" CLASS="FRIGHT" nowrap>
+	    		<TABLE width="100%" cellpadding="3">
+	        	        <TR>
+		    		        <TD width="1%" nowrap>
+		            		        <B>{t}hour:{/t}</B>
+			                </TD>
+			        	<TD width="99%" nowrap>
+					        {$nodestats.hour.download.data|string_format:"%.2f"} {$nodestats.hour.download.units} ({$nodestats.hour.downavg.data|default:"0"} kbps) / {$nodestats.hour.upload.data|string_format:"%.2f"} {$nodestats.hour.upload.units} ({$nodestats.hour.upavg.data|default:"0"} kbps) 
+					</TD>
+				</TR>
+				<TR>
+		    		        <TD width="1%" nowrap>
+		            		        <B>{t}24 hour:{/t}</B>
+			                </TD>
+			        	<TD width="99%" nowrap>
+					        {$nodestats.day.download.data|string_format:"%.2f"} {$nodestats.day.download.units} ({$nodestats.day.downavg.data|default:"0"} kbps) / {$nodestats.day.upload.data|string_format:"%.2f"} {$nodestats.day.upload.units} ({$nodestats.day.upavg.data|default:"0"} kbps)
+					</TD>
+				</TR>
+				<TR>
+		    		        <TD width="1%" nowrap>
+		            		        <B>{t}30 days:{/t}</B>
+			                </TD>
+			        	<TD width="99%" nowrap>
+					        {$nodestats.month.download.data|string_format:"%.2f"} {$nodestats.month.download.units} ({$nodestats.month.downavg.data|default:"0"} kbps) / {$nodestats.month.upload.data|string_format:"%.2f"} {$nodestats.month.upload.units} ({$nodestats.month.upavg.data|default:"0"} kbps)
+					</TD>
+				</TR>
+			</TABLE>
+		</TD>
+	</TR>
+{/if}
 	<TR CLASS="LIGHT">
 		<TD WIDTH="100%" CLASS="FBOTTOMU" COLSPAN="3" ALIGN="RIGHT">
 			<A HREF="?m=customerinfo&id={$nodeinfo.ownerid}">{t}All nodes{/t} <IMG SRC="img/cancel.gif" ALT=""></A>
